Add not allowed combinations to product type and correct customizable typo
